modified to compile on JDK 1.4